
2015-08-19  Ron Norman
	* If -frelax-syntax then just give Warning when VALUEs in REDEFINES
	  instead of an error. Some legacy COBOL code can be doing this.

2015-08-19  Ron Norman
	* Swapped order of parameters for C compiler and Linking so that
	  -L options come before -l 
	  Otherwise the linker does not find things correctly on Linux

2015-07-07  Ron Norman
	* Added CB_DEVICE_PRINTER with a new value to differentiate between
	  PRINTER and SYSOUT. DISPLAY ... UPON PRINTER can be redirected via
	  the env var COBPRINTER similar to what Micro Focus supports
	  parser.y, typeck.c & tree.h changed for this in the compiler
	  termio.c, common.c changed in the runtime

2015-07-02  Ron Norman
	* Fixes to tree.c, tree,h typeck.c field.c codegen.c to correctly
	  handle COMP-X data fields. This now works the same as Micro Focus

2015-06-29  Ron Norman
	* parser.y fixed so unstring works with identifier/literal/function

2015-04-28  Ron Norman
	* codegen.c now emits extern <function prototype> ();
	  for each subroutine called statically to avoid 
	  C compiler warnings

2015-04-27  Ron Norman

	* cobc.c codegen.c common.h typeck.c
	  updated to handle more options for support of Micro Focus
	  format files. New compile option -fmf-files sets all
	  sequential/relative files to be MF compatible
	  REWRITE is now allowed for LINE SEQUENTIAL files although
	  a status of 44 may happen if the new record will not
	  fit in the original record slot on disk.
	  New compile option -fibmcomp effectively sets:
	     binary-size: 2-4-8 & synchronized-clause: ok
	  And compile option -fno-ibmcomp effectively sets:
	     binary-size: 1--8 & synchronized-clause: ignore

2015-04-25  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (cb_emit_initialize): bug #84 check target for INITIALIZE,
	  almost fixed as suggested by Edward Hard

2015-04-14  Ron Norman

	* cobc.c codegen.c common.h tree.h parser.y typeck.c